# linux-multi-theme-toggle

./: .gitignore  Cargo.toml  INSTALL.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  config-example.toml  deny.toml  install.sh
.github/workflows/: ci.yml  package.yml  security.yml
examples/: README-modules.md  colors-dark.json  colors-light.json
examples/modules/: alacritty.toml  discord-betterdiscord.toml  kitty.toml  spotify.toml
examples/scripts/: spotify-spicetify.sh
lmtt/: Cargo.toml
lmtt-config-tui/: Cargo.toml
lmtt-config-tui/assets/: config-schema.json
lmtt-config-tui/examples/: test_detectors.rs
lmtt-config-tui/src/: detectors.rs  lib.rs  main.rs
lmtt-core/: Cargo.toml
lmtt-core/examples/: test_detectors.rs
lmtt-core/src/: cache.rs  colors.rs  config.rs  error.rs  fallback.rs  fsutil.rs  lib.rs  theme_detection.rs  types.rs
lmtt-modules/: Cargo.toml
lmtt-modules/src/: cleanup.rs  custom.rs  fish.rs  fuzzel.rs  gtk.rs  hyprland.rs  hyprlock.rs  hyprpanel.rs  lib.rs  nvim.rs  qt.rs  registry.rs  regreet.rs  setup.rs  swaync.rs  tmux.rs  vscode.rs  waybar.rs  wezterm.rs  wofi.rs  xdg.rs  xfconf.rs
lmtt-platforms/: Cargo.toml
lmtt-platforms/src/: lib.rs
lmtt/src/: main.rs  matugen.rs  tui.rs
packaging/: PKGBUILD  build-srpm.sh  lmtt.rpmlintrc  lmtt.spec
