[workspace]
resolver = "2"
members = [
    "lmtt",
    "lmtt-core",
    "lmtt-platforms",
    "lmtt-modules",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mason"]
license = "MIT"
repository = "https://github.com/yourusername/linux-matugen-theme-toggle"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Config and CLI
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

# D-Bus for XDG portal and notifications
zbus = { version = "4.4", default-features = false, features = ["tokio"] }

# File system and utilities
dirs = "5.0"
which = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Color utilities
palette = "0.7"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
