[package]
name = "lmtt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
palette = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
